B-F Sandbox Full-Backup/src/objects/Account_Snapshot__c.object
<CustomObject>
    <description>FDC-PLFC - used to capture analytics for the Account using Analytical Snapshot</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FDC-PLFC</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Snapshots</relationshipLabel>
        <relationshipName>Account_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agg_shares_of_5_shareholders_in_family__c</fullName>
        <label>Agg shares of 5% shareholders in family</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_3m_Volume__c</fullName>
        <label>Average 3m Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Tenures_of_Directors__c</fullName>
        <label>Average Tenures of Directors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_age_of_Directors__c</fullName>
        <label>Average age of Directors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Board_Number_of_Directors__c</fullName>
        <label>Board: Number of Directors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CEO_and_COB_split__c</fullName>
        <label>CEO and COB split?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CEO_family_member__c</fullName>
        <label>CEO family member?</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COB_Independent_Director__c</fullName>
        <label>COB Independent Director?</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COB_family_member__c</fullName>
        <label>COB family member?</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Controlled_Company_Exemptions__c</fullName>
        <label># Controlled Company Exemptions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dual_Class__c</fullName>
        <label>Dual Class?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Earnings_Per_Share__c</fullName>
        <label>Earnings Per Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Family_Directors__c</fullName>
        <label># Family Directors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Independent_Directors__c</fullName>
        <label># Independent Directors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Trade_Price__c</fullName>
        <label>Last Trade Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Majority_Independent__c</fullName>
        <label>Majority Independent?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Management_Directors__c</fullName>
        <label># Management Directors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market_Capitalization__c</fullName>
        <label>Market Capitalization</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Non_Independent_Directors__c</fullName>
        <label># Other Non-Independent Directors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P_E_Ratio__c</fullName>
        <label>P/E Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Profit_Margin__c</fullName>
        <label>Profit Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shares_Outstanding__c</fullName>
        <label>Shares Outstanding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Former</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <label>Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X5_shareholders_that_are_family__c</fullName>
        <label># 5% shareholders that are family</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account Snapshot</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AS-{000000}</displayFormat>
        <label>Account Snapshot #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Snapshots</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>